# FileFlow

./: .gitignore  CMakeLists.txt  app.rc
.github/workflows/: cd.yaml  ci.yaml
icons/: app_icons.icns
src/: main.cpp
src/controller/: controller.cpp  controller.hpp
src/core/: movingFiles.cpp  movingFiles.hpp  mtpWin.cpp  mtpWin.hpp
src/core/utils/: pathChecker.hpp
src/qt/: fileformatselector.cpp  fileformatselector.hpp  mainwindow.cpp  mainwindow.hpp
